<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyEmailClient</string>
    <string name="login_title">login</string>
    <string name="hello_again_world">Hello again World!</string>
    <string name="game_starten">Start Game</string>
    <string name="highscores">Highscores</string>
    <string name="credits">credits</string>
    <string name="settings">settings</string>
    <string name="myemailclient_login">MyEmailClient Login</string>
    <string name="abbrechen">cancel</string>
    <string name="anmelden">login</string>
    <string name="benutzername">Username:</string>
    <string name="pa_wort">Password:</string>
    <string name="email_anbieter">Provider:</string>
    <string name="emailanbieter">Provider:</string>
    <string name="emailadresse">Email-Address</string>
    <string name="passwort">Password</string>
    <string name="von_0">of 0</string>
    <string name="betreff_eingang_0">Subject Entrance 0</string>
    <string name="nachricht_nr_0">Email No. 0</string>
    <string name="datumUhrzeit">11:00:00 21.08.2018</string>
    <string name="eingang">entrance</string>
    <string name="betreff_eingang_2">Subject Entrance 2</string>
    <string name="von_2">of 2</string>
    <string name="nachricht_nr_2">Email No. 2</string>
    <string name="von">from</string>
    <string name="assd">email adress</string>
    <string name="an">to</string>
    <string name="betreff">Subject</string>
    <string name="email_schreiben">write email</string>
    <string name="no_emails_available">No Emails available</string>
    <string name="empty_mail_list">empty_mail_list</string>
    <string name="empty_inputs_toast">Please fill in the fields.</string>
    <string name="inputs_wrong">username or password wrong</string>
    <string name="button">Button</string>
    <string name="action_settings">action_settings</string>
    <string name="neue_email">new email</string>
    <string name="toast_send">send</string>
    <string name="open_drawer">open Drawer</string>
    <string name="close_drawer">close Drawer</string>
    <string name="keineMails">no mails</string>
    <string name="detail_email">Email Details</string>
    <string name="deleteDialogText">Sure to delete this email?</string>
    <string name="title_dialog_delete">Email löschen</string>
</resources>
