<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:text="@string/myemailclient_login"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/color1"
            android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/benutzername"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/login_input_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/emailadresse"
                android:textColor="@color/eingabefelder"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pa_wort"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/login_input_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/passwort"
                android:layout_weight="2"
                android:textColor="@color/eingabefelder"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/emailanbieter"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/login_spinner_emailprovider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:entries="@array/provider">
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/login_btn_escape"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:background="@color/color1"
                android:padding="8dp"
                android:layout_weight="1"
                android:text="@string/abbrechen" />

            <Button
                android:id="@+id/login_btn_signIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:background="@color/color1"
                android:padding="8dp"
                android:layout_weight="1"
                android:text="@string/anmelden"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>