<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/von_0"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/betreff_eingang_0"
                android:textSize="22sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/messagetext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nachricht_nr_0"
                android:textSize="20sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/sentdate"
            android:layout_width="38dp"
            android:layout_height="61dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/datumUhrzeit"
            android:textAlignment="viewEnd"
            android:textSize="15sp" />
    </LinearLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/sv"/>
</LinearLayout>
