<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/holo_blue_dark">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/login_title"
            android:textColor="@color/colorAccent"
            android:textSize="40sp"
            android:layout_margin="14dp"
            android:padding="8dp"
            android:textStyle="bold"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:weightSum="4"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:gravity="center_horizontal">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:background="@color/colorButton"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic"
                    android:text="@string/game_starten" />
            </LinearLayout>

            <!-- android:textcolor="@android:....." zeigt Android-Ursprungsfarben,z.B. color/black -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:gravity="center_horizontal">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:background="@color/colorButton"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic"
                    android:text="@string/highscores"/>
             </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:gravity="center_horizontal">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:background="@color/colorButton"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic"
                    android:text="@string/credits"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:gravity="center_horizontal">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:background="@color/colorButton"
                    android:textStyle="italic"
                    android:textColor="@color/colorAccent"
                    android:text="@string/settings"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
